<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiyouPlus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_miquan">秘圈</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">秘友</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_self_password">密码保护</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="show_notice">\t\t\t\t\t自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>
    <string name="advstring">用心感动你我，秘友，你的贴心棉袄</string>
    <string name="favor">赞</string>
    <string name="contact">聊天</string>
    <string name="comment">评论</string>
    <string name="anonymous">某秘友</string>
    <string name="time">时间</string>
    <string name="create_tiezi_hint">写下今天的秘话……</string>
    <string name="comment_hint">写下想对他/她说的话……</string>
    <string name="emotion">表情</string>
    <string name="takephoto">拍照</string>
    <string name="gallary">相册</string>
    <string name="ResourceModel">素材模板</string>
    <string name="title_activity_show_image">图片浏览</string>
    <string name="adjust_effect">调整效果</string>
    <string name="brightness">亮度</string>
    <string name="returntext">返回</string>
    <string name="mitness">模糊</string>
    <string name="action_menu_create_tiezi">发帖</string>
    <string name="title_activity_create_tiezi">发帖</string>
    <string name="title_activity_edit_my_mibo">EditMyMiboActivity</string>
    <string name="allselect">全选</string>
    <string name="delete">删除</string>
    <string name="mymibo">我的秘博</string>
    <string name="mycomment">我的评论</string>
    <string name="myfeedback">意见反馈</string>
    <string name="mymibocomment">我的秘博/评论</string>
    <string name="loadingtip">正在加载,请稍后……</string>
    <string name="withoutdata">暂无数据</string>
    <string name="florcount">几楼</string>

</resources>