<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
     >
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
         <TextView
        android:id="@+id/show_mycomment_head_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="left"
        android:layout_weight="1.0"
        android:text="@string/anonymous" />

         <TextView
             android:id="@+id/show_mycomment_head_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:gravity="right"
             android:layout_weight="1.0"
             android:text="@string/time" />

     </LinearLayout>
     
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
      <ImageView
        android:id="@+id/show_mycomment_head_imageview"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:maxHeight="35dp"
        android:maxWidth="35dp"
        android:src="@drawable/image_emoticon" />
    
    <TextView
        android:id="@+id/show_mycomment_flor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/florcount" />

    <com.rockerhieu.emojicon.EmojiconTextView
        android:id="@+id/show_mycomment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@null"
        android:gravity="left"
        android:minHeight="30dp"
        android:maxHeight="200dp"
         />
     </LinearLayout>
     

		
</LinearLayout >
